--- a/src/Components/Card/index.css
+++ b/src/Components/Card/index.css
@@ -2,6 +2,13 @@
   margin: 0;
 }
 
+img,
+picture {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .Card {
   width: 375px;
   display: flex;
@@ -12,14 +19,8 @@
   border-radius: 10px;
 }
 
-.Card__img {
-  width: 100%;
-  height: 290px;
-  background-image: url("../../images/image-product-desktop.jpg");
-  background-size: 100%;
-  background-position: center;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+.Card img {
+  border-radius: 10px 10px 0 0;
 }
 
 .Card__body {
@@ -28,7 +29,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  gap:25px;
+  gap: 25px;
 }
 
 .Card__body-subtitle {
@@ -59,30 +60,20 @@
   color: hsl(158, 36%, 37%);
 }
 
-.Card__body-old-price {
-  text-decoration: line-through;
-}
-
 @media only screen and (min-width: 1440px) {
   /* For desktop: */
-  
+
   .Card {
     margin: 0;
     width: 700px;
-    height: 520px;
+    height: 525px;
     display: flex;
     flex-direction: row;
     align-items: center;
   }
 
-  .Card__img {
-    width: 50%;
-    height: 100%;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 0px;
-    border-bottom-left-radius: 10px;
+  .Card img {
+    border-radius: 10px 0 0 10px;
   }
 
   .Card__body {
@@ -97,6 +88,10 @@
 
   .Card__body-description {
     font-size: 18px;
+  }
+
+  picture {
+    border-radius: "10px";
   }
 
   .Card__body-new-price {
